--- a/src/hwbi_rest/hwbi_rest.csproj
+++ b/src/hwbi_rest/hwbi_rest.csproj
@@ -8,6 +8,7 @@
     <Compile Remove="Models\DB.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
@@ -24,7 +25,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.0.0" />
-    <PackageReference Include="PetaPoco.NetCore" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Content Update=".dockerignore">
