--- a/src/hwbi_rest/hwbi_rest.csproj
+++ b/src/hwbi_rest/hwbi_rest.csproj
@@ -1,14 +1,20 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Controllers\BaselineController.cs" />
+    <Compile Remove="Controllers\BaselineServiceScoresController.cs" />
     <Compile Remove="Models\DB.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Properties\PublishProfiles\FolderProfile.pubxml" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
